# RustKartGL

./: Cargo.toml  LICENSE
src/: camera.rs  car.rs  controller.rs  game_state.rs  load_shaders.rs  main.rs  matrix.rs  old code.txt
src/car/: body.rs  drivetrain.rs  engine.rs  gearbox.rs  input.rs  movement.rs  tyres.rs
srcshaders/: basic_fragment.fs  basic_vertex.vs
